--- a/BIO_106L/Lab_6/main.tex
+++ b/BIO_106L/Lab_6/main.tex
@@ -11,10 +11,62 @@
   latexsym
 }
 \graphicspath{{./images/}}
-\title{}
+\title{Analysis of Lawns Lab Report}
 \author{Philip Kim}
 \date{\today}
 \begin{document}
 \maketitle
-
+\begin{table}[h!]
+  \begin{center}
+    \caption{\textbf{Species Disturbed}}
+    \begin{tabular}{|l|c|}\hline
+      \textbf{Species} & \textbf{Disturbed}\\ \hline
+      Medicago lupulina (Black Medick) & 218 \\\hline
+      Cotula australis (Brass Buttons) & 29 \\\hline
+      Medicago polymorpha (Bur Medick) & 16 \\\hline
+      Malva parviflora (Little Mallow) & 7 \\\hline
+      Ssymbrium irio (London Rocket) & 3 \\\hline
+      Cyclospermum leptophyllum (Marsh Parlsey) & 2 \\\hline
+      Dichondra micrantha (Pony's Foot) & 1 \\\hline
+      Capsella bursapastoris (Shepherd's Purse) & 1 \\\hline
+      Oxalis corniculata (Sorrel) & 1 \\\hline
+      Sonchus oleraceus (Sow Thistle) & 0 \\\hline
+      Veronica arvensis (Speedwell) & 0 \\\hline
+      Trifolium fragiferum (Strawberry Clover) & 0 \\\hline
+      Lepidium didymum (Swine Cress) & 0 \\\hline
+      Trifolium repens (White Clover) & 0 \\\hline
+      Unknown & 0 \\\hline
+      \textbf{Grass} & \textbf{184} \\\hline
+      \textbf{Bare Ground} & \textbf{18} \\\hline
+      \textbf{Total Individuals} & \textbf{480} \\\hline
+    \end{tabular}
+  \end{center}
+\end{table}
+\newpage
+\begin{table}[h!]
+  \begin{center}
+    \caption{\textbf{Species Undisturbed}}
+    \begin{tabular}{|l|c|}\hline
+      \textbf{Species} & \textbf{Disturbed}\\ \hline
+      Medicago lupulina (Black Medick) & 64 \\\hline
+      Cotula australis (Brass Buttons) & 48 \\\hline
+      Medicago polymorpha (Bur Medick) & 32 \\\hline
+      Malva parviflora (Little Mallow) & 31 \\\hline
+      Ssymbrium irio (London Rocket) & 22 \\\hline
+      Cyclospermum leptophyllum (Marsh Parlsey) & 10 \\\hline
+      Dichondra micrantha (Pony's Foot) & 9 \\\hline
+      Capsella bursapastoris (Shepherd's Purse) & 3 \\\hline
+      Oxalis corniculata (Sorrel) & 2 \\\hline
+      Sonchus oleraceus (Sow Thistle) & 1 \\\hline
+      Veronica arvensis (Speedwell) & 1 \\\hline
+      Trifolium fragiferum (Strawberry Clover) & 1 \\\hline
+      Lepidium didymum (Swine Cress) & 0 \\\hline
+      Trifolium repens (White Clover) & 0 \\\hline
+      Unknown & 0 \\\hline
+      \textbf{Grass} & \textbf{192} \\\hline
+      \textbf{Bare Ground} & \textbf{64} \\\hline
+      \textbf{Total Individuals} & \textbf{480} \\\hline
+    \end{tabular}
+  \end{center}
+\end{table}
 \end{document}
