--- a/BIO_106L/Lab_7/main.tex
+++ b/BIO_106L/Lab_7/main.tex
@@ -30,15 +30,15 @@
   \end{itemize}
   \item Which of the three genotypes do you think would be most fit in a rural area, far from cities, such as the woods in the far South of England?
   \begin{itemize}
-    \item
+    \item The further away from industrial cities, the more white or ``lighter color'' moths would most likely fit.
   \end{itemize}
   \item Which of the three genotypes do you think would be most fit in the woods near industrial cities?
   \begin{itemize}
-    \item
+    \item The ``melanic'' (dark) moths would best fit near industrial cities due to pollution since it makes the tree barks darker and melanic moths more conspicuous. This obviously made it harder for predators to find and prey on these melanic moths.
   \end{itemize}
   \item What do you think happened after England passed clean air laws?
   \begin{itemize}
-    \item
+    \item If England passed clean air laws, then the trees would lighten from the previous darker trees that was caused by the pollution that no longer exists or at least minimal pollution. These lighter trees would make the lighter moths more conspicuous and the melanic moths an easier target for predators to find.
   \end{itemize}
   \item Play around with the simulation and change the ``selection against Black, selection against White.'' What do you notice?
   \begin{itemize}
