--- a/BIO_106L/Lab_7/main.tex
+++ b/BIO_106L/Lab_7/main.tex
@@ -38,7 +38,7 @@
   \end{itemize}
   \item What do you think happened after England passed clean air laws?
   \begin{itemize}
-    \item If England passed clean air laws, then the trees would lighten from the previous darker trees that was caused by the pollution that no longer exists or at least minimal pollution. These lighter trees would make the lighter moths more conspicuous and the melanic moths an easier target for predators to find.
+    \item If England passed clean air laws, then the trees would lighten from the previous darker trees that was caused by the pollution. These lighter trees would make the lighter moths more conspicuous and the melanic moths an easier target for predators to find.
   \end{itemize}
   \item Play around with the simulation and change the ``selection against Black, selection against White.'' What do you notice?
   \begin{itemize}
