--- a/BIO_106L/Lab_7/main.tex
+++ b/BIO_106L/Lab_7/main.tex
@@ -30,7 +30,7 @@
   \end{itemize}
   \item Which of the three genotypes do you think would be most fit in a rural area, far from cities, such as the woods in the far South of England?
   \begin{itemize}
-    \item The further away from industrial cities, the more white or ``lighter color'' moths would most likely fit.
+    \item The further away from industrial cities, the more white or ``lighter color'' moths would most likely best fit in rural areas. Without the environment effecting microevolution and natural selection, peppered moths with light-colored wings flecked with scattered dark sports would rest on lichen-encrusted tree trunks which made it very difficult for predators to spot.
   \end{itemize}
   \item Which of the three genotypes do you think would be most fit in the woods near industrial cities?
   \begin{itemize}
@@ -42,7 +42,7 @@
   \end{itemize}
   \item Play around with the simulation and change the ``selection against Black, selection against White.'' What do you notice?
   \begin{itemize}
-    \item It has an inverse relationship.
+    \item It has an inverse relationship. The three genotypes: BB, Bb, bb
   \end{itemize}
 \end{enumerate}
 \end{document}
