--- a/BIO_106L/Lab_4/main.tex
+++ b/BIO_106L/Lab_4/main.tex
@@ -13,13 +13,14 @@
 \definecolor{A}{HTML}{3366cc}
 \definecolor{B}{HTML}{339933}
 \definecolor{C}{HTML}{ff9900}
-\def\M#1#2{\(M_{\color{#1}{\textbf{#2}}}\)}
+
 \graphicspath{{./images/}}
-\title{Intermediate Disturbance Hypothesis Lab Report}
+\title{Analysis of Coral Growth Lab Report}
 \author{Philip Kim}
 \date{\today}
 \begin{document}
 \maketitle
+
 \begin{table}[h!]
   \begin{center}
     \caption{\(Morphospecies_{A,B,C}\)}\label{tab:table1}
@@ -74,7 +75,10 @@
 \begin{center}
   \includegraphics[width=\textwidth]{idh.png}
   \fbox{\begin{minipage}{45em}
-    In the bar chart above, are the averages of morphospecies with no disturbance \M{A}{A}, intermediate disturbance \M{B}{B} and high disturbance \M{C}{C}. As you can see from all three error bars and the dashed line across, \M{A}{A} has a overlap with both \M{B}{B} and \M{C}{C}. This means there is no statistical significant difference compared to \M{B}{B} and \M{C}{C}. However, \M{B}{B} and \M{C}{C} error bars do not overlap, therefore we can conclude that there is a statistical significant difference with \M{B}{B} and \M{C}{C}.
+    \begin{enumerate}
+      \item What was the mean \(\pm \) standard error of coral growth (= change mg/cm2) at each of the four temperature categories?
+      \item Remember that the average water temperature of the coral's natural habitat was 28 °C. What would happen if global climate change causes the average seawater temperature to increase to 30°C?
+    \end{enumerate}
   \end{minipage}}
 \end{center}
 \end{document}
